syntax = "proto3";
package ChatterBoxCore.Protocols;

message ChatCommandMessageProtoBuf
{
	string chatWithUser = 4;
}