syntax = "proto3";
package ChatterBoxCore.Protocols;
import "ChatCommandMessageProtoBuf.proto";
import "ListUsersCommandMessageProtoBuf.proto";
import "LoginCommandMessageProtoBuf.proto";
import "LogoutCommandMessageProtoBuf.proto";
import "RegisterCommandMessageProtoBuf.proto";

message ICommandMessageProtoBuf {
	enum CommandTypeProtoBuf
	{
		LoginCommand = 0;
		LogoutCommand = 1;
		ListUsersCommand = 2;
		RegisterCommand = 3;
		ChatCommand = 4;
	}

	CommandTypeProtoBuf commandType = 3;
	oneof CommandData {
		RegisterCommandMessageProtoBuf RegisterCommandMessagePB = 9;
		LoginCommandMessageProtoBuf LoginCommandMessagePB = 10;
		LogoutCommandMessageProtoBuf LogoutCommandMessagePB = 11;
		ChatCommandMessageProtoBuf ChatCommandMessagePB = 12;
		ListUsersCommandMessageProtoBuf ListUsersCommandMessagePB = 13;
	}
}