syntax = "proto3";
package ChatterBoxCore.Protocols;

message ListUsersCommandMessageProtoBuf
{
}