syntax = "proto3";
package ChatterBoxCore.Protocols;

message LoginCommandMessageProtoBuf
{
	string username = 4;
	string password = 5;
}