syntax = "proto3";
package ChatterBoxCore.Protocols;

message LogoutCommandMessageProtoBuf
{
}
