syntax = "proto3";
package ChatterBoxCore.Protocols;

message RegisterCommandMessageProtoBuf
{
	string username = 4;
	string password = 5;
}