syntax = "proto3";
package ChatterCore.Protocols;

message TextChatterMessageProtoBuf
{
	string textMessage = 4;
	string chatWithUser = 5;
}